fix expanded playlist moving off screen by setting min-width to 0

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -116,9 +116,11 @@ footer {
   font-weight: bold;
 }
 .expanded-playlist {
+  flex: 0 1 auto;
   position: relative;
   background-color: #202020;
   color: white;
+  min-width: 0;
   width: 100%;
   height: 88vh;
   border-radius: 10px;
@@ -126,14 +128,17 @@ footer {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-}
-.expanded-playlist > .sticky-area > div {
-  grid-template-columns: minmax(auto, 60%) minmax(auto, 20%) minmax(auto, 25%);
+  opacity: 0;
+  transition: opacity 250ms ease-in;
 }
 .expanded-playlist > ul {
-  height: calc(100% - 60px);
+  height: calc(100% - 70px);
   overflow-y: scroll;
   list-style-type: none;
+}
+.expanded-playlist.appear {
+  opacity: 1;
+  transition: opacity 250ms ease-in;
 }
 .playlist-order {
   background-color: #1b1b1b;
@@ -148,16 +153,12 @@ footer {
   color: #d8d8d8;
 }
 .playlist-track {
+  display: flex;
+  align-items: center;
   margin-top: 2%;
   margin-bottom: 2%;
   margin-left: 2%;
-  display: grid;
-  grid-template-columns: minmax(auto, 10%) minmax(auto, 20%) minmax(auto, 20%) minmax(
-      auto,
-      30%
-    );
-  grid-row: 1;
-  align-items: center;
+  justify-content: flex-start;
   text-align: left;
   color: #d4d4d4;
 }
@@ -166,21 +167,16 @@ footer {
   height: 60px;
 }
 .playlist-track > h4 {
-  margin-left: 2%;
+  margin-left: 5%;
+  width: 20%;
   font-weight: bold;
 }
 .playlist-track > h5 {
+  text-align: center;
+  width: 40%;
+  min-width: fit-content;
+  max-width: 40%;
   color: #9c9c9c;
-  margin-left: 80%;
-}
-#expanded-playlist-container {
-  flex: 1 1 auto;
-  opacity: 0;
-  transition: opacity 250ms ease-in;
-}
-#expanded-playlist-container.appear {
-  opacity: 1;
-  transition: opacity 250ms ease-in;
 }
 #playlist-mods {
   display: none;
@@ -351,7 +347,7 @@ footer {
   border-top: 1px solid #6e6e6e;
 }
 .sticky-area {
-  height: 60px;
+  height: 70px;
   min-height: fit-content;
   align-items: center;
   top: 0;
@@ -363,14 +359,17 @@ footer {
   font-weight: 700;
 }
 .sticky-area > div {
-  display: grid;
-  grid-row: 1;
+  display: flex;
   height: fit-content;
 }
 .sticky-area > div > h2 {
+  flex-grow: 3;
   font-size: 150%;
   margin-left: 5%;
   margin-right: 5%;
+}
+#playlist-descriptors {
+  justify-content: space-around;
 }
 ul.topnav {
   z-index: 1000;
