--- a/src/public/css/playlists.less
+++ b/src/public/css/playlists.less
@@ -1,4 +1,35 @@
-@import "expanded-playlist.less";
+@expanded-playlist-width: 100%;
+@expanded-playlist-height: 88vh;
+@expanded-playlist-border-radius: 10px;
+
+.expanded-playlist {
+  flex: 0 1 auto;
+  position: relative;
+  background-color: #202020;
+  color: white;
+
+  min-width: 0;
+  width: 100%;
+  height: 88vh;
+
+  border-radius: 10px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  opacity: 0;
+  transition: opacity 250ms ease-in;
+
+  & > ul {
+    height: calc(100% - @sticky-area-height);
+    overflow-y: scroll;
+    list-style-type: none;
+  }
+  &.appear {
+    opacity: 1;
+    transition: opacity 250ms ease-in;
+  }
+}
 
 .playlist-order {
   background-color: #1b1b1b;
@@ -15,45 +46,31 @@
 }
 
 .playlist-track {
+  display: flex;
+  align-items: center;
   margin-top: 2%;
   margin-bottom: 2%;
   margin-left: 2%;
-
-  display: grid;
-  grid-template-columns: minmax(auto, 10%) minmax(auto, 20%) minmax(auto, 20%) minmax(
-      auto,
-      30%
-    );
-  grid-row: 1;
-  align-items: center;
+  justify-content: flex-start;
   text-align: left;
-  color: rgb(212, 212, 212);
-}
+  color: #d4d4d4;
 
-.playlist-track > img {
-  width: 60px;
-  height: 60px;
-}
-
-.playlist-track > h4 {
-  margin-left: 2%;
-  font-weight: bold;
-}
-
-.playlist-track > h5 {
-  color: rgb(156, 156, 156);
-  margin-left: 80%;
-}
-
-#expanded-playlist-container {
-  flex: 1 1 auto;
-  opacity: 0;
-  transition: opacity 250ms ease-in;
-}
-
-#expanded-playlist-container.appear {
-  opacity: 1;
-  transition: opacity 250ms ease-in;
+  & > img {
+    width: 60px;
+    height: 60px;
+  }
+  & > h4 {
+    margin-left: 5%;
+    width: 20%;
+    font-weight: bold;
+  }
+  & > h5 {
+    text-align: center;
+    width: 40%;
+    min-width: fit-content;
+    max-width: 40%;
+    color: #9c9c9c;
+  }
 }
 
 #playlist-mods {
